--- a/app.rc
+++ b/app.rc
@@ -1,1 +1,1 @@
-IDI_ICON1               ICON    DISCARDABLE     "OLAP-ModelKit.ico"
+IDI_ICON1               ICON    DISCARDABLE     ":images/icon.ico"
